fixed collapse bug... somehow??

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -126,6 +126,10 @@ span.category-name {
   min-height: 30px;
 }
 
+.min {
+  min-height: 0;
+}
+
 .list-item {
   background-color: white;
   padding: 8px;
